[package]
name = "did-peer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
did = { path = "../did" }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
regex = "1"
multihash = "0.16.2"
multibase = "0.9.1"
sha2 = "0.10.2"
